--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="your_message">Your Message:</string>
     <string name="save">Save &amp; Exit</string>
     <string name="reset_password">Reset password</string>
+    <string name="set_up_your_password">Set up your password</string>
 </resources>
