wrap shared preferences, add countdown if password incorrect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="save">Save &amp; Exit</string>
     <string name="reset_password">Reset password</string>
     <string name="set_up_your_password">Set up your password</string>
+    <string name="show">Show</string>
 </resources>
