optimize import, add empty button for testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="reset_password">Reset password</string>
     <string name="set_up_your_password">Set up your password</string>
     <string name="show">Show</string>
+    <string name="delete_preferences">delete preferences</string>
 </resources>
